--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
         "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "lint": "prettier --plugin-search-dir . --check .",
-        "format": "prettier --plugin-search-dir . --write ."
+        "lint": "prettier --plugin prettier-plugin-svelte --check .",
+        "format": "prettier --plugin prettier-plugin-svelte --write ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-auto": "2.0.1",
-        "@sveltejs/kit": "1.16.2",
-        "@webgpu/types": "0.1.32",
-        "prettier": "2.8.8",
-        "prettier-plugin-svelte": "2.10.0",
-        "svelte": "3.59.0",
-        "svelte-check": "3.3.1",
-        "tslib": "2.5.0",
-        "typescript": "5.0.4",
-        "vite": "4.3.5"
+        "@sveltejs/adapter-auto": "2.1.0",
+        "@sveltejs/kit": "1.22.4",
+        "@webgpu/types": "0.1.34",
+        "prettier": "3.0.1",
+        "prettier-plugin-svelte": "3.0.3",
+        "svelte": "4.1.2",
+        "svelte-check": "3.4.6",
+        "tslib": "2.6.1",
+        "typescript": "5.1.6",
+        "vite": "4.4.9"
     },
     "type": "module",
-    "packageManager": "pnpm@8.4.0",
+    "packageManager": "pnpm@8.6.12",
     "engines": {
         "node": "^18.0.0",
         "pnpm": "^8.0.0"
